syntax = "proto3";

package odigos.io.odiglet.plugin.v1;

option go_package = "odigos.io/odiglet/plugin/v1";

import "google/protobuf/empty.proto";
import "v1/common.proto";

message AttachRequest {
  optional int32 process_id = 1;
  optional string service_name = 2;
  repeated KeyValue resource_attributes = 3;
  optional bytes initial_config = 4;
}

message ConfigRequest {
  optional int32 process_id = 1;
  optional bytes config = 2;
}

message DetachRequest {
  optional int32 process_id = 1;
}

service OdigletPluginV1 {
  rpc Attach(AttachRequest) returns (google.protobuf.Empty) {}

  rpc ApplyConfig(ConfigRequest) returns (google.protobuf.Empty) {}

  rpc Detach(DetachRequest) returns (google.protobuf.Empty) {}
}